--- a/frontend/homepage/src/styles/App.css
+++ b/frontend/homepage/src/styles/App.css
@@ -41,12 +41,28 @@ body {
   font-weight: 500;
 }
 
-.navbar-right .btn-primary {
+/* .navbar-right .btn-primary {
   background-color: #ffc300;
   padding: 0.5rem 1rem;
   border-radius: 4px;
   color: #000;
   text-decoration: none;
+} */
+
+/* Login button css */
+.btn-primary {
+  background-color: #ffc300; /* Primary color */
+  color: #333;
+  border: none;
+  padding: 0.5rem 1rem;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 1rem;
+  transition: background-color 0.3s ease;
+}
+
+.btn-primary:hover {
+  background-color: #e0a800; /* Darker shade on hover */
 }
 
 .mobile-menu-icon {
