--- a/frontend/homepage/src/styles/App.css
+++ b/frontend/homepage/src/styles/App.css
@@ -182,93 +182,6 @@ body {
   }
 }
 
-/* Hero Section
-.hero {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 2rem;
-  background: #fff;
-}
-
-.hero-content {
-  max-width: 1200px;
-  text-align: center;
-}
-
-.hero-content h2 {
-  font-size: 2.5rem;
-  margin-bottom: 1rem;
-}
-
-.hero-content p {
-  max-width: 600px;
-  margin: 0 auto 1rem auto;
-  line-height: 1.6;
-}
-
-.hero-content button {
-  background-color: #ffc300;
-  border: none;
-  padding: 0.75rem 1.5rem;
-  cursor: pointer;
-  font-size: 1rem;
-  border-radius: 4px;
-  color: #000;
-  font-weight: 500;
-} */
-
-/* Footer */
-/*.footer {
-  background-color: #343a40;
-  color: #fff;
-  padding: 2rem;
-  text-align: center;
-}
-
-.footer a {
-  color: #ffc300;
-  margin: 0 1rem;
-  text-decoration: none;
-  transition: color 0.3s ease;
-}
-
-.footer a:hover {
-  color: #fff;
-}*/
-
-/*
-.footer-socials a {
-  color: #ffc300; 
-  text-decoration: none;
-  transition: color 0.3s ease, transform 0.2s ease;
-}
-
-.footer-socials a:hover {
-  color: #fff !important; 
-  transform: scale(1.1);
-}
-
-/* Responsive Design */
-/*
-@media (max-width: 768px) {
-  .offer-items,
-  .features-grid,
-  .testimonials,
-  .pricing-plans {
-    flex-direction: column;
-    align-items: center;
-  }
-}
-
-@media (max-width: 768px) {
-  .footer-socials a {
-    display: block;
-    margin: 0.5rem 0;
-  }
-}
-*/
-
 /* Custom CSS for hover effects */
 .footer-socials a {
   padding: 8px;
@@ -443,5 +356,10 @@ body {
   line-height: 1.8;
   text-align: justify; /* Justify the text */
 }
+
+/* Slick Carousel CSS */
+@import "slick-carousel/slick/slick.css";
+@import "slick-carousel/slick/slick-theme.css";
+
 
 
